record list added
