# api/src/model/sub_categories.py
@@ -1,0 +1,7 @@
+from .base import BaseMySQL, Base
+
+
+class SubCategories(BaseMySQL, Base):
+    """subcategories entity"""
+
+    __tablename__ = "subcategories"
